# DeepWorm

./: README.md
contracts/script/: Trigger.s.sol  UpdateEnclaveKey.s.sol
contracts/src/: IMarlinTEEAttestationVerifier.sol  Worm.sol
nematoduino/Nematoduino_Library/utility/: CMakeLists.txt
nematoduino/src/: main.cpp
worm/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  flake.nix  go.mod  go.sum  main.go  price.go  setup.sh  supervisord.conf  worm.go
worm/Nematoduino_Library/: CMakeLists.txt  Worm.c  Worm.cpp  Worm.h  Worm.hpp  behaviors.cpp  behaviors.hpp
worm/app/: index.html
worm/nematoduino/: CMakeLists.txt  Worm.c  Worm.h  behaviors.c  behaviors.h
worm/nematoduino/utility/: CMakeLists.txt  connectome.c  connectome.h
worm/src/: events.go  main.c  main.cpp  main.rs  price.go  worm.go
